test/conformance/chainsaw/deleting-policies/cel-lib/global-context-lib/rbac.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: test-deletingpolicy-role
rules:
  - apiGroups: [""]
    resources: ["pods"]
    verbs: ["get", "list", "delete"]

  - apiGroups: [""]
    resources: ["configmaps"]
    verbs: ["get", "list"]

  - apiGroups: ["kyverno.io"]
    resources: ["globalcontextentries"]
    verbs: ["get", "list"]
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: test-deletingpolicy-rolebinding
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: test-deletingpolicy-role
subjects:
  - kind: ServiceAccount
    name: kyverno-cleanup-controller
    namespace: kyverno
